# StreamObserver

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  sample_stream.txt  sample_thinking.txt
assets/scene/: fire.anim.json  fire.py  study.json  study.py  werner.py
docs/: BACKEND.md  CANDLE_DESIGN.md  CONCURRENT_FORWARD_PASS.md  DESIGN_DELTAS.md  FUSED_CACHE_GO_NOGO.md  GRAMMAR.md  INFINITE_CONTEXT.md  SCENE_HANDOFF.md  TEMPLATING_STUDY.md
personas/: herzog.txt  herzog_broad.txt  herzog_deanchored.txt  herzog_flowing.txt  herzog_norecipe.txt  herzog_varyform.txt
src/: lobe.rs  main.rs  present.rs  present_scene.rs  present_worker.rs  prompt.rs  retrieval.rs  sprite.rs  stats.rs  trace.rs  tui.rs
src/backend/: candle.rs  llama.rs  mod.rs
src/lobe/: firing.rs  fused.rs  interject.rs  novelty.rs  observe.rs  rag.rs  sampling.rs  scoring.rs  testutil.rs  types.rs  window.rs
